fix: align item

--- a/components/Form.module.css
+++ b/components/Form.module.css
@@ -13,6 +13,10 @@
     font-size: 15px;
 }
 
+.donate {
+    margin-top: .7rem;
+}
+
 .donationModeWrapper .outlinedButton {
     width: 100%;
     height: 100%;
